Fixed invisible buttons on iOS, I think.

--- a/public_html/vorp/edit/ved.css
+++ b/public_html/vorp/edit/ved.css
@@ -121,6 +121,8 @@ span.vedModeLink {
   margin:0 0.5em;
   border-radius:0.25em;
   border:0;
+  color:black;
+  background:#ccc;
 }
 
 .vedModesDiv {
